# Spinal-Multiple-Myeloma-SEG

./: .gitignore  Database_viewer_final.py  Database_viewer_final_new.py  Database_viewer_final_with_parser.py  Database_viewer_final_with_parser_final.py  README.md  config.py  environment_creation.txt  functions.py  pyproject.toml  requirements.txt  run_prediction_of_nnUNet_networks.py  run_prediction_of_nnUNet_networks_on_TCIA_data_final.py  run_prediction_of_nnUNet_networks_on_TCIA_data_final_with_parsers.py  run_prediction_of_nnUNet_networks_on_TCIA_data_final_with_parsers_final.py  setup.cfg  spinal_mm_cli.py  utils.py  utils_new.py
spinal_multiple_myeloma_seg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
