[metadata]
name = spinal-multiple-myeloma-seg
version = 0.1.0
description = Tools and scripts for Spinal-Multiple-Myeloma-SEG
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = MISAG-BUT

[options]
py_modules =
    Database_viewer_final
    Database_viewer_final_with_parser
    run_prediction_of_nnUNet_networks_on_TCIA_data_final
    run_prediction_of_nnUNet_networks_on_TCIA_data_final_with_parsers
    utils
    spinal_mm_cli

install_requires =
    torch
    torchvision
    pydicom
    napari
    SimpleITK

[options.entry_points]
console_scripts =
    spinal-db-viewer = spinal_mm_cli:database_viewer
    spinal-run-nnunet = spinal_mm_cli:run_prediction
